fix: improve behaviour on smaller screens
Add a `grid-auto-columns` declaration on the root div to restrict
the max width. Also limit max-width on the carousel container to 95%
to include some perceived padding

--- a/src/components/Carousel/index.module.css
+++ b/src/components/Carousel/index.module.css
@@ -2,7 +2,7 @@
 	/* Used for positioning buttons and dots */
 	position: relative;
 	overflow: hidden;
-	max-width: 100%;
+	max-width: 95%;
 	border-radius: 14px;
 
 	width: var(--width, initial);
